--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.5",
   "description": "Dynamic JavaScript Heatmaps for the Web",
   "author": {
-    "name": "Patrick Wied",
+    "name": "Patrick Wied"
   },
   "main": "build/heatmap.js",
   "devDependencies": {
